[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "^1.77.0"
p224 = "^0.13.2"
getrandom = "^0.2.9"
rayon = "1.7.0"

[features]
default = ["p224/ecdh", "getrandom/js"]

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

