[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
flutter_rust_bridge = "^1.78.6"
p224 = "^0.13.2"
getrandom = "^0.2.14"
rayon = "1.10.0"
wasm-bindgen = "0.2.92"

[features]
default = ["p224/ecdh", "getrandom/js"]

[profile.release]
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]

